@@ -1,3 +1,8 @@
+2012-08-14  Alan Modra  <amodra@gmail.com>
+
+	* powerpc.h: Add more relocs.
+	(R_PPC_REL16*): Rename to R_POWERPC_REL16*.
+
 2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR gold/14091
